# rust_fly_isles

./: .gitignore  Cargo.toml  README.md  build.rs  roadmap.md  todo.md
.run/: Dist.run.xml  Run (Debug).run.xml  Run (Dev No Debug).run.xml  Run (Release).run.xml  update -p rust_macroquad_ui.run.xml
feedback/: feedback.md
src/: conf.rs  main.rs
src/common/: angle.rs  camera.rs  colliders.rs  composite_bounded.rs  contract.rs  curve.rs  enum_maps.rs  fps.rs  frame.rs  line_circle.rs  metrics.rs  mod.rs  perf.rs  physics.rs  pool.rs  prefs.rs  resource.rs  sound.rs  sprite.rs  sprite_clip.rs  unsorted.rs
src/game/: bots.rs  cannon.rs  control_guard.rs  durable.rs  game_viewport.rs  generator_001.rs  generator_002.rs  gid.rs  isles.rs  loot.rs  mobs.rs  mod.rs  particles.rs  plane.rs  progression.rs  rpg.rs  sky.rs  sounds.rs
src/game/ui/: equipment_window.rs  improvements_window.rs  journal_window.rs  legacy_hud.rs  main_menu.rs  minimap.rs  mod.rs  modal_windows.rs  new_hud.rs  res_indicator.rs  shop_window.rs  weapons_panel.rs
src/lifecycle/: draw.rs  input.rs  loading.rs  mod.rs  start.rs  update.rs
src/model/: data.rs  def.rs  mod.rs  state.rs
src/resources/: constants.rs  games.rs  mod.rs  sounds.rs
src/resources/fx/: mod.rs  settings.rs  sprites.rs
src/resources/materials/: default.vert  fog.frag  fog.rs  huer.frag  huer.rs  mod.rs  pain.rs
src/resources/objects/: arms.rs  attacks.rs  isles.rs  loot.rs  mobs.rs  mod.rs  objects.rs
src/resources/sprites/: clouds.rs  explosion_facepalm33_clip.rs  explosion_facepalm34_clip.rs  isles.rs  loot.rs  (+6 more)
(+7 files in other folders)
